Chore: Simplify `BLOCKS` initialization with `Set.of`